Refactor to only one execute function in query service